2012-05-07  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* DevNotes: Add entry cgf-000003.
	* cygheap.h (init_cygheap::pid_handle): Delete.
	* dcrt0.cc (child_info_spawn::handle_spawn): Keep parent open if we
	have execed.
	* pinfo.cc (pinfo::thisproc): Remove pid_handle manipulations.
	(pinfo::init): Don't consider a reaped process to be available.
	* spawn.cc (child_info_spawn::worker): Remove pid_handle manipulations.
	Make wr_proc_pipe and parent noninheritable when starting a program
	which doesn't use the Cygwin DLL.  Conditionally reset wr_proc_pipe to
	inheritable if CreateProcess fails.  Inject wr_proc_pipe handle into
	non-Cygwin process.  Consider a non-cygwin process to be 'synced'.

2012-05-03  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* DevNotes: Add entry cgf-000002.
	* fhandler_tty.cc (bytes_available): Revert to previous Oct-2011
	behavior where a dummy buffer is used to determine how many bytes will
	be read.
	(fhandler_pty_master::ioctl): Correct coercion in assignment.

2012-05-03  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (get_adapters_addresses): Only create thread on affected
	systems.  Change comment acordingly.
	* wincap.h (wincaps::has_gaa_largeaddress_bug): New element.
	* wincap.cc: Implement above element throughout.
	(wincap_8): New globale wincaps to support Windows 8.
	(wincapc::init): Take Windows 8 into account.  Set new
	has_gaa_largeaddress_bug member to false on 32 bit systems.

2012-05-02  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* DevNotes: New file.  Add entry cgf-000001.
	* sigproc.cc (proc_terminate): Don't set parent pid of child to 1 if
	we've execed since the execed process is still considered the parent.

	* child_info.h: Bump copyright.

2012-05-02  Corinna Vinschen  <corinna@vinschen.de>

	* fenv.cc (fesetround): Fix test for valid input parameter.
	(fesetprec): Ditto.

2012-04-30  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* fhandler.h (PIPE_ADD_PID): Define new flag.